# Vasketur

./: .gitignore  docker-compose.yml  production.yml
api/: Dockerfile  conftest.py  manage.py  pyproject.toml  pytest.ini  querystate-cron  querystate-script.sh
api/vasketur/: settings.py  urls.py  wsgi.py
api/vasketur/machinestate/: apps.py  models.py  utilities.py
api/vasketur/machinestate/management/commands/: querystate.py
api/vasketur/machinestate/migrations/: 0001_initial.py  0002_auto_20190514_2025.py  0003_auto_20190517_1139.py
api/vasketur/machinestate/tests/: test_requests.py  test_transaction_db.py
db/: init-user-db.sh
