[tool.poetry]
name = "api"
version = "0.1.1"
description = ""
authors = ["Steven Pilger <stevenpilger@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.9"
gunicorn = "^19.9"
pytest-django = "^3.4"
requests = "^2.21"
requests-html = "^0.10.0"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-watch = "^4.2"
pytest-django = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
